en/3.0/config/server-port.rst
=============
Ports changes
=============

This page is generated by Machine Translation from Japanese.

Changing the port
=================

|Fess| by default, you use the port 8080. Change in the following steps to
change.

Tomcat port changes
-------------------

Change the port Tomcat is |Fess| available. Modifies the following
described conf/server.xml changes.

-  8080: HTTP access port

-  8005: shut down port

-  8009: AJP port

-  : SSL HTTP access port 8443 (the default is off)

SOLR configuration
------------------

May need to change if you change the Tomcat port using the settings in
the standard configuration, the same Solr-Tomcat, so |Fess| Solr server
referenced information. change the
webapps/fess/WEB-INF/classes/fess\_solr.dicon.

::

    <arg>"http://localhost:8080/solr"</arg>

**Note: to display the error on search and index update: cannot access
the Solr server and do not change if you change the Tomcat port similar
to the above ports.**
